--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.0.2",
-    "@angular/cli": "^12.0.2",
+    "@angular/cli": "^16.2.11",
     "@angular/compiler-cli": "12.0.2",
     "@types/chartist": "0.9.46",
     "@types/graphql": "^14.5.0",
@@ -92,6 +92,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "typescript": "~4.2.4",
+    "webpack": "^5.89.0"
   }
 }
